--- a/composer.json
+++ b/composer.json
@@ -28,12 +28,14 @@
         "drupal/crop": "^2.0",
         "drupal/devel": "^1.2",
         "drupal/ds": "^3.1",
+        "drupal/entity_browser": "^2.0.0",
         "drupal/entity_embed": "^1.0@beta",
         "drupal/features": "^3.7",
         "drupal/field_group": "^1.0",
         "drupal/fixed_block_content": "^1.0@RC",
         "drupal/geofield_map": "^2.5",
         "drupal/image_widget_crop": "^2.1",
+        "drupal/inline_entity_form": "^1.0@RC",
         "drupal/metatag": "^1.5",
         "drupal/pathauto": "^1.2",
         "drupal/single_datetime": "^1.6",
