--- a/config/sync/user.role.moderator.yml
+++ b/config/sync/user.role.moderator.yml
@@ -25,6 +25,7 @@ permissions:
   - 'access workbench'
   - 'administer nodes'
   - 'administer workflow'
+  - 'create argumentaire content'
   - 'create article content'
   - 'create audio media'
   - 'create edition workflow_transition'
@@ -43,16 +44,20 @@ permissions:
   - 'delete any media'
   - 'delete any video_embed media'
   - 'delete media'
+  - 'delete own article content'
   - 'delete own audio media'
+  - 'delete own event content'
   - 'delete own file media'
   - 'delete own image media'
   - 'delete own video_embed media'
   - 'delete terms in tag_media'
+  - 'edit any article content'
   - 'edit any audio media'
   - 'edit any event content'
   - 'edit any file media'
   - 'edit any image media'
   - 'edit any video_embed media'
+  - 'edit own article content'
   - 'edit own audio media'
   - 'edit own event content'
   - 'edit own file media'
@@ -63,6 +68,7 @@ permissions:
   - 'edit terms in tag_media'
   - 'execute php code'
   - 'revert article revisions'
+  - 'revert event revisions'
   - 'switch users'
   - 'update any media'
   - 'update media'
