--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/admin_toolbar": "^1.24",
         "drupal/bootstrap": "^3.11",
+        "drupal/captcha": "^1.2",
         "drupal/config_installer": "^1.8",
         "drupal/core": "^8.8",
         "drupal/crop": "^2.0",
@@ -41,6 +42,7 @@
         "drupal/metatag": "^1.7",
         "drupal/migrate_tools": "^4.0",
         "drupal/pathauto": "^1.6",
+        "drupal/recaptcha": "^3.0",
         "drupal/rules": "^3.0@alpha",
         "drupal/rules_role_email": "^1.0@alpha",
         "drupal/single_datetime": "^1.6",
